--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,31 +1,4 @@
-.bg-primary-30 {
-   background-color: rgb(var(--color-primary-30))
-}
-
-.color-primary-30 {
-   color: rgb(var(--color-primary-30))
-}
-
-.bg-primary-40 {
-   background-color: rgb(var(--color-primary-40))
-}
-
-.color-primary-40 {
-   color: rgb(var(--color-primary-40))
-}
-
-.bg-primary-100 {
-   background-color: rgb(var(--color-primary-100))
-}
-
-.color-primary-100 {
-   color: rgb(var(--color-primary-100))
-}
-
-.bg-primary {
-   background-color: rgb(var(--color-primary))
-}
-
-.color-primary {
-   color: rgb(var(--color-primary))
-}
+.bg-primary-30 { background-color: oklch(var(--color-primary-30)) } .color-primary-30 { color: oklch(var(--color-primary-30)) }
+.bg-primary-40 { background-color: oklch(var(--color-primary-40)) } .color-primary-40 { color: oklch(var(--color-primary-40)) }
+.bg-primary-100 { background-color: oklch(var(--color-primary-100)) } .color-primary-100 { color: oklch(var(--color-primary-100)) }
+.bg-primary { background-color: oklch(var(--color-primary)) } .color-primary { color: oklch(var(--color-primary)) }
