--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,8 +1,6 @@
-@layer base {
-  :root {
---color-primary-30: 0 0 4;
-	--color-primary-40: 179 83 83;
-	--color-primary-100: 163 163 231;
-	--color-primary: 110 157 243;
-}
+@theme {
+--color-primary-30: rgb(0, 0, 4);
+	--color-primary-40: rgb(179, 83, 83);
+	--color-primary-100: rgb(163, 163, 231);
+	--color-primary: rgb(110, 157, 243);
 }
