--- a/sass/app.css
+++ b/sass/app.css
@@ -9,6 +9,6 @@
     --color-primary-30: rgb(0, 0, 4);
     --color-primary-40: rgb(179, 83, 83);
     --color-primary-100: rgb(163, 163, 231);
-    --color-primary-default: rgb(110, 157, 243);
+    --color-primary: rgb(110, 157, 243);
     --color-primary-red: rgba(191, 30, 30, 0.189);
 }
