--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -52,6 +52,15 @@ $colors: (
             3: oklch(0.58 0.09 210),
             4: oklch(0.80 0.14 85),
             5: oklch(0.74 0.13 35),
+
+            code: (
+                1: oklch(0.64 0.12 190),
+                2: oklch(0.70 0.10 165),
+                3: oklch(0.58 0.09 210),
+                4: oklch(0.80 0.14 85),
+                5: oklch(0.74 0.13 35),
+                --dark-5: oklch(0.74 0.13 35),
+            )
         )
     ),
     #sidebar: (
